# torch2trt

./: .gitignore  BENCHMARKS.md  BENCHMARKS_NANO.md  CHANGELOG.md  CLA.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE.md  README.md  bug.ipynb  build.py  example.ipynb  fp16_fallback_test.py  index.html  mkdocs.yml  narrow_test.py  qat_converter_test.py  repeat_test.py  requirements.txt  setup.py  test.py  test.sh  test_batch.sh  test_precision.sh  torch2trt.py  versions.json
benchmarks/: JETSON_NANO.md  JETSON_XAVIER.md
docker/21-06/: Dockerfile  build.sh  run.sh
docker/21-08/: Dockerfile  build.sh  run.sh
docker/21-09/: Dockerfile  build.sh  run.sh
docker/l4t-35.1.0/: Dockerfile  build.sh  run.sh
docs/: getting_started.md  index.md  see_also.md
docs/benchmarks/: dla_benchmarks.md  jetson_nano.md  jetson_xavier.md
docs/usage/: basic_usage.md  batch_size.md  cpp_usage.md  custom_converter.md  dla_usage.md  network_visualization.md  reduced_precision.md
examples/: __init__.py
examples/easyocr/: README.md  download_images.sh  generate_data.py  optimize_detector.py  optimize_recognizer.py  optimizer_recognizer.py  run_end2end.py
examples/image_classification/: imagenet_labels.json
examples/image_segmentation/: conversion.ipynb
examples/quantization_aware_training/: README.md  infer.py  mobilenetv2.py  models.py  parser.py  resnet.py  setup.py  train.py
master/: 404.html  CHANGELOG.html  CONTRIBUTING.html  converters.html  getting_started.html  index.html  see_also.html  sitemap.xml
master/benchmarks/: jetson_nano.html  jetson_xavier.html
master/search/: search_index.json
master/usage/: basic_usage.html  custom_converter.html  reduced_precision.html
notebooks/image_classification/: conversion.ipynb
notebooks/image_segmentation/: conversion.ipynb
notebooks/resnet18/: conversion.ipynb  live_demo.ipynb  resnet18.ipynb
plugins/: CMakeLists.txt
plugins/src/: example.cu  example_plugin.cu  example_plugin.h  example_plugin_test.cpp  example_plugin_test.cu  reflection_pad_2d_plugin.cu  reflection_pad_2d_plugin.h  reflection_pad_2d_plugin_test.cpp  reflection_pad_2d_plugin_test.cu  tests.cpp
qat_workflow/: cifar10.py  infer.py  models.py  utilities.py
qat_workflow/misc/: qat_converter_test.py
requirements/: requirements_10.txt  requirements_8.6.1.txt  requirements_8.txt
scripts/: benchmark_dla.py  benchmark_dla.sh  benchmark_dla_mp.sh  benchmark_dla_mp_generate_cache.sh  build_contrib.sh  build_docs.sh  build_pre_py3.7.sh  build_qat.sh  dump_converters.py  profile_timm.py  profile_timm_models.sh  release_build_docs.sh  release_push_docs.sh  test_docs.sh
src/: example.cu  example.h  example_test.cu  reflection_pad_2d_plugin.cu  reflection_pad_2d_plugin.h  reflection_pad_2d_plugin_test.cu
tests/converter_tests/: test_converters.py  test_getitem.py
tests/feature_tests/: test_contiguous.py  test_dataset.py  test_dataset_calibrator.py  test_flatten_module.py  test_interpolate_dynamic.py  test_save_load.py  test_tensor_shape_div_batch.py  test_version_utils.py
torch2trt/: __init__.py  build_utils.py  calibration.py  calibration_test.py  converters.py  dataset.py  dataset_calibrator.py  dataset_test.py  dynamic_shape_test.py  einsum_backend.py  flatten_module.py  flatten_module_test.py  flattener.py  flattener_test.py  misc_utils.py  module_recorder.py  module_test.py  shape_conversion.py  test.py  torch2trt.py  trt_module.py  utils.py  version_utils.py
torch2trt/calibration/: Float_inference  Int8_inference  (+4 more)
v0.2.0/: converters.html  getting_started.html  index.html  see_also.html  sitemap.xml
v0.3.0/: 404.html  CHANGELOG.html  CONTRIBUTING.html  converters.html  getting_started.html  index.html  see_also.html  sitemap.xml
v0.4.0/: 404.html  CHANGELOG.html  CONTRIBUTING.html  converters.html  getting_started.html  index.html  see_also.html  sitemap.xml
(+286 files in other folders)
